src/services/Logary.Services.Rutta/k8s/with-ingress/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rutta

spec:
  template:
    spec:
      containers:
      - name: rutta
