src/services/Logary.Services.Rutta/k8s/with-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rutta

spec:
  rules:
  - http:
      paths:
      - path: /i/logary
        pathType: Prefix
        backend:
          serviceName: rutta
          servicePort: http-json
